<?xml version='1.0' encoding='utf-8'?>
<resources>
    <string name="app_name">Audiobookshelf</string>
    <string name="title_activity_main">Audiobookshelf</string>
    <string name="custom_url_scheme">audiobookshelf</string>
    <string name="app_widget_description">Simple widget for audiobookshelf playback</string>
    <string name="action_jump_forward">Jump Forward</string>
    <string name="action_jump_backward">Jump Backward</string>
    <string name="action_skip_forward">Skip Forward</string>
    <string name="action_skip_backward">Skip Backward</string>
    <string name="action_change_speed">Change Playback Speed</string>
    <string name="widget_album_art_description">Album art</string>
    <string name="widget_play_pause_description">Play/Pause</string>
    <string name="widget_artist_placeholder">Artist</string>
    <string name="widget_title_placeholder">Title</string>
</resources>
