<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/widgetBackground"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:orientation="horizontal"
  android:baselineAligned="false"
  android:theme="@style/AppTheme.AppWidgetContainer"
  style="@style/Widget.Android.AppWidget.Container">

  <LinearLayout
    android:layout_width="0dp"
    android:layout_height="match_parent"
    android:layout_weight="3"
    android:background="?android:attr/colorAccent"
    android:theme="@style/MediaPlayerWidgetTheme"
    android:baselineAligned="false"
    android:orientation="horizontal"
    tools:ignore="NestedWeights">

    <ImageView
      android:id="@+id/widgetAlbumArt"
      android:layout_width="0dp"
      android:layout_height="match_parent"
      android:layout_weight="2"
      android:scaleType="centerCrop"
      android:contentDescription="@string/widget_album_art_description"
      android:src="@drawable/icon" />

    <LinearLayout
      android:layout_width="0dp"
      android:layout_height="match_parent"
      android:layout_weight="3"
      android:layout_marginVertical="8dp"
      android:orientation="vertical"
      android:gravity="center_vertical"
      tools:ignore="NestedWeights">

      <TextView
        android:id="@+id/widgetArtistText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_marginStart="8dp"
        android:gravity="bottom"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/widget_artist_placeholder"/>

      <TextView
        android:id="@+id/widgetMediaTitle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_marginStart="8dp"
        android:gravity="top"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/widget_title_placeholder"/>

      <LinearLayout
        android:id="@+id/widgetButtonContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal"
        android:background="?android:attr/colorAccent"
        android:theme="@style/MediaPlayerWidgetTheme"
        tools:ignore="NestedWeights">

        <ImageView
          android:id="@+id/widgetRewindButton"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="1"
          android:layout_margin="8dp"
          android:src="@drawable/exo_icon_rewind"
          android:contentDescription="@string/action_jump_backward"
          tools:ignore="PrivateResource"
          style="@style/Widget.Android.AppWidget.InnerView"/>

        <ImageView
          android:id="@+id/widgetPlayPauseButton"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="1"
          android:layout_margin="6dp"
          android:contentDescription="@string/widget_play_pause_description"
          android:src="@drawable/ic_media_play_dark" />

        <ImageView
          android:id="@+id/widgetFastForwardButton"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="1"
          android:layout_margin="8dp"
          android:src="@drawable/exo_icon_fastforward"
          android:contentDescription="@string/action_jump_forward"
          tools:ignore="PrivateResource" />
      </LinearLayout>

    </LinearLayout>

    <LinearLayout
      android:layout_width="36dp"
      android:layout_height="match_parent"
      android:orientation="vertical">

      <ImageView
        android:id="@+id/tinyCornerIcon"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_margin="6dp"
        android:adjustViewBounds ="true"
        android:contentDescription="@string/app_name"
        android:src="@drawable/icon_monochrome" />
    </LinearLayout>

  </LinearLayout>
</LinearLayout>
